fix: use google signOut instead of disconnect

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-social-login",
-  "version": "3.2.1",
+  "version": "3.2.2-snapshot",
   "description": "Simple client side social authentication for Angular2 application.",
   "main": "dist/bundles/angular2-social-login.min.js",
   "module": "dist/index.js",
